--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,11 @@ torchaudio>=2.0.0
 # faiss-cpu>=1.7.4
 # chromadb>=0.4.0
 
+# CuePilot LLM Integration
+openai>=1.0.0
+PyYAML>=6.0
+requests>=2.28.0
+
 # System Integration
 psutil>=5.9.0
 
